src/objects/OrderMonthly__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>OrdersWeekly</relationshipLabel>
        <relationshipName>OrdersWeekly1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>IsDefault__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsDefault</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Month__c</fullName>
        <description>Month of Order created/updated</description>
        <inlineHelpText>Month of Order created/updated</inlineHelpText>
        <label>Month</label>
        <precision>2</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Order</label>
        <referenceTo>Order</referenceTo>
        <relationshipLabel>OrdersWeekly</relationshipLabel>
        <relationshipName>OrdersWeekly1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Year__c</fullName>
        <description>Year or Order created/updated</description>
        <inlineHelpText>Year or Order created/updated</inlineHelpText>
        <label>Year</label>
        <precision>4</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>OrderMonthly</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>OrderMonthly Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>OrdersMonthly</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>